2014-05-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* fwrite.c: OS X build fix.

2014-04-30  Norbert Preining  <preining@logic.at>

	* fwrite.c: Replace sprintf with snprintf.

2013-11-16  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* fread.c: Allow lines with only a line ending in mfgets(),
	because dictionary files with DOS line endings can't be read.

2013-09-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* fwrite.c: Bug fix as suggested by Akira, Karl, and Norbert.

	* tests/mendex.test (new): Shell script for a test case.
	* tests/foo.idx (new): Test input.
	* tests/foo.ind (new): Expected output.
	* Makefile.am: Adapted.

2013-06-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mendex.h: First include <c-auto.h>.

2012-11-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Avoid use of deprecated INCLUDES.

2012-10-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* convert.c: Move common #include's from here ...
	* fread.c: ... and here ...
	* fwrite.c: ... and here ...
	* main.c: ... and here ...
	* pageread.c: ... and here ...
	* sort.c: ... and here ...
	* styfile.c: ... and here ...
	* mendex.h: ... to here and add '#include <c-auto.h>'.
	* kp.c: Add '#include "mendex.h"' for common #include's.

	Avoid TL vs W32TeX diffs.
	* main.c: Use "PTEX_KANJI_ENC" and "guess_input_kanji_encoding".
	[WIN32}: Add command line option '-T' (from W32TeX).

2012-09-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* main.c [WIN32]: Use "sjis" file encoding (from W32TeX).

2012-07-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* convert.c, pageread.c, styfile.c: Handle input files with
	Dos/Windows (CRLF) line endings (from W32TeX).

	Use Nelson Beebe's qqsort() instead of qsort() (from W32TeX).
	* convert.c, sort.c: Add #include "qsort.h".
	* qsort.[ch] (new): Copied from ../makeindexk.
	* Makefile.am (mendex_SOURCES): Add the new files.

2012-07-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* convert.c, kp.[ch], main.c, styfile.c: Always use KPATHSEA.